fix: scroll influence on mobile menu button

--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -915,6 +915,15 @@
         &__button 
             &:hover 
                 background-color: #FAAD13
+    .story 
+        &-wide 
+            &__button 
+                &:hover 
+                    opacity: 0.7
+        &-video 
+            &__button
+                &:hover 
+                    opacity: 0.5
 // @media only screen
 //     .body 
 //         &-scroll 
