--- a/sass/blocks/_story.sass
+++ b/sass/blocks/_story.sass
@@ -48,8 +48,6 @@
             background-image: url(../img/play-blue.svg)
             background-repeat: no-repeat
             background-position: center
-            &:hover 
-                opacity: 0.7
     &-video 
         display: flex
         flex-direction: column
@@ -93,6 +91,4 @@
             background-image: url(../img/play-white.svg)
             background-repeat: no-repeat
             background-position: center
-            &:hover 
-                opacity: 0.5
 
